added story import feature

--- a/app/views/stories/index.html
+++ b/app/views/stories/index.html
@@ -13,7 +13,7 @@
 		<div class='wrapper'>
 			<div class='header'>
 				<p><a href='/logout'>Logout</a></p>
-				<p><a href='/articles/import'>Import Articles</a></p>
+				<p><a href='/stories/import'>Import Stories</a></p>
 			</div>
 			<h1>Welcome {{ session['fname'] }} {{ session['lname'] }}</h1>
 		</div> <!-- wrapper -->
