--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -1,60 +1,34 @@
-* {
-  font-family: Arial;
+#nav {
+	padding-left: 5%;
 }
 
-.wrapper {
-	width: 1000px;
-	min-height: 400px;
-	margin-top: 20px;
-	margin-right: auto;
-	margin-left: auto;
-	padding-left: 10px;
-	padding-right: 10px;
-	padding-bottom: 20px;
-	border: 1px solid black;
+#word {
+	font-size: 40px;
+	border: 1px solid lightgrey;
+	min-height: 60px;
+	letter-spacing: 3;
 }
-
-.registration, .login {
-	width: 440px;
-	display: inline-block;
-	vertical-align: top;
+#word > .container {
+	vertical-align: middle;
+	font-family: helvetica;
 }
-.login {
-	margin-left: 30px;
+.left {
+	width: 100px;
+	display: inline;
 }
-.panel-horizontal .panel-heading {
-       float: left;
-       width: 19%;
-       padding: 0;
-       border-bottom: 0;
-       border-right: 1px solid transparent;
-       margin-bottom: 15px;
+.left, .text {
+	display: inline;
 }
-
-.panel-horizontal .panel-body {
-       float: right;
-       width: 80%;
-       margin: 0 0 15px 0;
-       padding: 0;
-}
-
-.header h1 {
-	width: 400px;
-	display: inline-block;
-}
-.header p {
-	display: inline-block;
-	text-align: right;
-}
-
-h1 {
-	margin-bottom: 20px;
-}
-
-p, th, td, a {
-	font-size: 20px;
-}
-
-.error {
+.pivot {
 	color: red;
+	display: inline;
+	margin: 0 -15;
+}
+
+#text {
+	width: 100%;
+}
+
+.stories {
+	list-style-type: none;
 }
