Adds popular stories, average speed data methods

--- a/app/views/stories/index.html
+++ b/app/views/stories/index.html
@@ -10,83 +10,19 @@
 	<script src="{{url_for('static', filename='jquery.highlighttextarea.js') }}"></script>	
 	<script type="text/javascript" src="{{url_for('static', filename='open-spritz.js') }}"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" integrity="sha256-Sk3nkD6mLTMOF0EOpNtsIry+s1CsaqQC1rVLTAy+0yc= sha512-K1qjQ+NcF2TYO/eI3M6v8EiNYZfA95pQumfvcVrTHtwQVDG+aHRqLi/ETn2uB+1JqwYqVG3LIvdm9lj6imS/pQ==" crossorigin="anonymous"></script>
-	<script type="text/javascript">
-
-	$(document).ready(function()
-	{  
-		var wpm = 1;
-		$('#go').on('click', function() {
-			if($('#go').html() == "Start") {
-			  wpm = parseInt($('#wpm').val(), 10);
-			  $("#go").html('Pause');
-				ospritz.init($('#text'), wpm, $('#word'));
-			} else if ($('#go').html() == "Pause") {
-				$("#go").html('Resume');
-			  ospritz.pause();
-			} else if ($('#go').html() == "Resume") {
-				$("#go").html('Pause');
-			  ospritz.resume();
-			}
-			
-		});
-		$('#restart').on('click', function() {
-			  ospritz.pause();
-			  ospritz.abort();
-			  wpm = parseInt($('#wpm').val(), 10);
-			  $("#go").html('Pause');
-				ospritz.init($('#text'), wpm, $('#word'));
-		});
-		
-		$(document).keydown(function(e) {
-      if (e.which == 32){//space bar
-      	var a = e.target;
-      	var b = $('#text')[0];
-      	if (a != b) {
-          e.preventDefault();
-          if ($('#go').html() == "Pause") {
-			  	  $("#go").html('Resume');
-			      ospritz.pause();
-		    	} else if ($('#go').html() == "Resume") {
-		  	  	$("#go").html('Pause');
-	  		    ospritz.resume();
-  			  }
-        }
-      } else if (e.which == 37){//left arrow
-      	var a = e.target;
-      	var b = $('#text')[0];
-      	if (a != b) {
-          e.preventDefault();
-          ospritz.left();
-        }
-      } else if (e.which == 39){//right arrow
-      	var a = e.target;
-      	var b = $('#text')[0];
-      	if (a != b) {
-          e.preventDefault();
-          ospritz.right();
-        }
-      } else if (e.which == 38){//up arrow
-      	var a = e.target;
-      	var b = $('#text')[0];
-      	if (a != b) {
-          e.preventDefault();
-          ospritz.up();
-        }
-      } else if (e.which == 40){//down arrow
-      	var a = e.target;
-      	var b = $('#text')[0];
-      	if (a != b) {
-          e.preventDefault();
-          ospritz.down();
-        }
-      }   
-    });
-    $('#text').focus();
-	});
-
-	</script>
+	<script type="text/javascript" src="{{url_for('static', filename='main.js') }}"></script>
 </head>
 <body>
+	<script type="text/javascript">
+	$(document).ready(function() {
+    	console.log("ready!");
+	$("#go").click(function(){
+		$.post( "/record_speed", $( "#wpm" ).val() );
+
+	})
+
+	});
+	</script>
 	<nav id = 'nav'>
 		<h1>NewsBurst</h1>
 		<p>Quickly devour the New York Times</p>
@@ -97,9 +33,13 @@
 				<button>Refresh Stories</button>
 			</form>
 		</div>
+		<div id = 'stats'>
+			<h3>Your Average Speed: {{average_user_speed}} words per minute</h3>
+			<h3>Average Speed for All Other Users: {{total_avg_speed}} words per minute</h3>
+		</div>
 	</nav>
 	<input type = 'hidden' id="text" value ="{{session['loaded_story']['abstract']}}" rows="1">
-<br/><br/>
+<!-- <br/><br/> -->
 <center>
 	<form action = '/save_story' method = 'post'>
 		<input type = 'hidden' name = 'story_id' value = "{{session['loaded_story']['id']}}">
@@ -114,13 +54,15 @@
 	</div>
 	<div>
 		<div class = 'row'>
-		Words per minute: <input id="wpm" type="number" value="500" size="10" style="width:50px;"/>
-		</div>
-		<div class = 'row'>
-		<button id="go" type="button" class="btn btn-success">Start</button>
-		</div>
-		<div class = 'row'>
-		<button id="restart" type="button" class="btn btn-warning">Restart</button>
+			<form>
+				Words per minute: <input id="wpm" name = 'wpm' type="number" value="400" size="10" style="width:50px;"/>
+				</div>
+				<div class = 'row'>
+				<button id="go" type="button" class="btn btn-success">Start</button>
+				</div>
+				<div class = 'row'>
+				<button id="restart" type="button" class="btn btn-warning">Restart</button>
+			</form>
 		</div>
 	</div>
 	<div class = 'loaded_story'>Loaded Story: {{session['loaded_story']['title']}}</div>
@@ -149,6 +91,33 @@
 	<div class="col-xs-3"></div>
 	<div class="col-xs-6 favorites_holder">
 		FAVORITES
+		<table>
+			<tr>
+				<th>
+					Headline
+				</th>
+				<th>
+					Number of Reading Lists
+				</th>
+				<th>
+					Actions
+				</th>
+			</tr>
+			{% for story in popular_stories %}
+			<tr>
+				<td>
+					{{story['title']}}
+				</td>
+				<td>
+					{{story['saves']}}
+				</td>
+				<td>
+					<a href="/load_story/{{story['id']}}">Load Into Speed Reader</a>
+					<a href="{{story['url']}}">Visit Full Story</a>
+				</td>
+			</tr>
+			{% endfor %}
+		</ul>
 	</div>
 	<div class="col-xs-3"></div>
 </div>
