--- a/app/views/users/index.html
+++ b/app/views/users/index.html
@@ -10,6 +10,11 @@
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 	</head>
 	<body>
+		<header>
+			<div class="page-header">
+				<h1>News<span id='red'>Burst</span> <small>Quickly devour the <em>New York Times</em></small></h1>
+			</div>
+		</header>
 		<div class='wrapper'>
 			<div class='registration'>
 				{% with messages = get_flashed_messages(with_categories=true) %}
