--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -19,13 +19,19 @@
 	margin: 2% 5%;
 }
 
-
+.about {
+	width: 50%;
+}
 #nav {
 	padding-left: 5%;
 	font-weight: bold;
 }
 h1 {
 	font-weight: bold;
+}
+
+.dropdown {
+	display: inline-block;
 }
 
 #word {
